--- a/Xreveal_ITA.ini
+++ b/Xreveal_ITA.ini
@@ -20,12 +20,12 @@ Author=bovirus (bovirus@gmail.com)
 [DIALOG_4]
 0=Specifica codice regionale Blu-ray
 4=La finestra si chiuderà automaticamente tra %d secondi.
-5=Non chiederlo più
+5=Non chie&derlo più
 
 [DIALOG_5]
 0=Specifica regionale DVD
 4=La finestra si chiuderà automaticamente tra %d secondi.
-5=Non chiederlo più
+5=Non chie&derlo più
 
 [DIALOG_6]
 0=Impostazioni
@@ -37,15 +37,15 @@ Author=bovirus (bovirus@gmail.com)
 [DIALOG_8]
 0=Generale
 3=Lingua:
-4=&Esegui Xreveal all'avvio di Windows
-5=Mantieni ques&ta finestra sempre in primo piano
-6=&Elenca unità nel menu barra sistema
+4=E&segui Xreveal all'avvio di Windows
+5=Mantieni ques&ta fines&tra sempre in primo piano
+6=ELlenca unità nel menu barra sistema
 7=&Controlla automaticamente aggiornamenti
 8=<a>Controlla ora</a>
 9=Tema:
-10=Usa accelerazione hardware &AES
+10=Usa accelerazione &hardware &AES
 11=<a>Prestazioni</a>
-12=Visualizza finestra info nuovi media
+12=Visualizza finestra &info nuovi media
 
 [DIALOG_9]
 0=CD
@@ -60,8 +60,8 @@ Author=bovirus (bovirus@gmail.com)
 7=Rimuovi &APS (sistema protezione analogico)
 8=Rimuovi &UOP (proibizioni operazioni utente)
 9=Rimuovi &ARccOS
-10=Sottotitoli trasparenti
-11=Per aprire dischi DVDXreveal necessita di <a>libdvdcss-2.dll</a>.
+10=Trasparenza &sottotitoli
+11=Per aprire dischi DVD Xreveal necessita di <a>libdvdcss-2.dll</a>.
 12=Disabilita avvio automatico
 
 [DIALOG_11]
@@ -70,15 +70,15 @@ Author=bovirus (bovirus@gmail.com)
 4=Rimuovi &BD+
 5=Rimuovi &RC (codice regionale)
 6=Codice regionale &disco:
-7=Rimuovi codice regionale
+7=Rimuovi &codice regionale
 8=Rimuovi &UOP (proibizioni operazioni utente)
-9=Rimuo&vi CCI (info controllo copia)
+9=Rimuovi &CCI (info controllo copia)
 10=Disabilita BD &Live
-11=&Simula display 3D connesso
+11=Simula display &3D connesso
 12=Rinomina cartella AACS in
 15=Rimuovi pubblicità e trailer
-16=Rimuovi sequen&ze video più corte di %s minuti
-17=&Sottotitoli trasparenti
+16=Rimuovi &sequenze video più corte di %s minuti
+17=Trasparenza &sottotitoli
 
 [DIALOG_12]
 0=KeyDB
@@ -104,13 +104,13 @@ Author=bovirus (bovirus@gmail.com)
 10=Spazio libero:
 11=Capacità:
 12=&Mantieni protezione
-13=&Verifica Hash contenuto
+13=&Verifica hash contenuto
 14=Crea file &checksum MD5
 15=Crea dvdid.&xml
-16=Crea file &log
+16=Crea fi&le registro eventi
 17=Crea disc.&metaiso
 18=Copia solo cartella &VIDEO_TS
-19=Verifica &bytes sincronizzazione M2TS
+19=Verifica &byte sincronizzazione M2TS
 
 [DIALOG_15]
 0=Xreveal
@@ -127,11 +127,11 @@ Author=bovirus (bovirus@gmail.com)
 [DIALOG_17]
 0=Ripper
 3=Numero tentativi lettura:
-4=Interrompi con errori ignorati superiori a :
+4=Interrompi con errori ignorati superiori a:
 5=Durante il rip del Blu-ray 3D nella cartella copia cartella SSIF
 6=Aggiungi contenuto registro stato unità al registro rip
 7=Visualizza avviso creazione immagine protetta
-8=Abilita il ripper pre-incluso per unità &virtuali
+8=Abilita il ripper integrato per unità &virtuali
 
 [DIALOG_18]
 0=Registra Xreveal
@@ -146,7 +146,7 @@ Author=bovirus (bovirus@gmail.com)
 0=HD DVD
 3=&Abilita supporto HD DVD
 4=Rimuovi &primo titolo riprodotto
-5=Rimuovi proibizioni azioni utente
+5=Rimuovi proibizioni azioni &utente
 6=Rimuovi restrizioni &genitori
 
 [DIALOG_21]
@@ -177,16 +177,16 @@ Author=bovirus (bovirus@gmail.com)
 0=Suoni
 3=Riproduci suono dopo l'apertura del disco
 4=Riproduci suono dopo il ripping del disco
-5=Suono per ripping completato:
-6=Suono per errore durante ripping:
+5=Suono ripping completato:
+6=Suono errore durante ripping:
 
 [DIALOG_28]
 0=Invia metafile
 1=&Invia
-3=Creazione metafile del disco, attendi...
+3=Creazione metafile disco, attendi...
 4=Aggiunta di %s...
 5=<a>Vuoi inviarlo manualmente?</a>
-6=Metafile:
+6=File meta:
 7=Email:
 8=Commento:
 9=Upload %s di %s
@@ -218,7 +218,7 @@ Author=bovirus (bovirus@gmail.com)
 8=Chiave pubblica:
 9=Firma:
 10=Numero dispositivo:
-11=Chaive privata:
+11=Chiave privata:
 12=Incolla la chiave privata per verificarla
 
 [DIALOG_33]
@@ -248,8 +248,8 @@ Author=bovirus (bovirus@gmail.com)
 
 [DIALOG_36]
 0=Destinazione
-3=Variabili supportate e <a>transforms</a>. Formato: $(variable:transform), tutti i nomi ignorano maiuscole/minuscole.
-4=Sostituisci sottolineature in $(DiscLabel) con spazi
+3=Variabili supportate e <a>trasformazioni</a>. Formato: $(variabile:transformazione), tutti i nomi ignorano maiuscole/minuscole.
+4=Sostituisci in $(DiscLabel) sottolineature con spazi
 
 [DIALOG_37]
 0=Cartella destinazione
@@ -258,22 +258,22 @@ Author=bovirus (bovirus@gmail.com)
 
 [DIALOG_38]
 0=Mappa tipo disco
-3=Specifica un valore di mappa corrispondente al tipo del disco. <a>Supported variables</a>.
+3=Specifica un valore mappa corrispondente al tipo di disco. <a>Variabili supportate</a>.
 4=&DVD:
 5=&HD DVD:
 6=&BD:
 7=&UHD:
 
 [DIALOG_39]
-0=Sotituisci o Salca con nome
-3=La destinazione <a>%s</a> è già esistente.
+0=Sotituisci o salva con nome
+3=La destinazione <a>%s</a> esiste già.
 4=Sostituisci
 5=Salva con nome
 
 [DIALOG_A]
 0=Aggiornamento programma
 3=È disponibile una nuova versione di %s!
-4=È disponibile %s.\nVersione installata: %s.\nVuoi scaricare la nuova versione?
+4=Nuova versione: %s.\nVersione installata: %s.\nVuoi scaricare la nuova versione?
 5=Info nuova versione:
 6=Salta questa versione
 7=Ricordamelo in seguito
@@ -313,15 +313,15 @@ Author=bovirus (bovirus@gmail.com)
 15=Alcuni dei file richiesti non sono presenti.\n\nReinstalla Xreveal.
 16=Xreveal non è stato installato correttamente.\n\nVuoi risolvere il problema?
 17=Per usare Xreveal è necessario riavviare il computer.\n\nVuoi riavviare il computer?
-18=Xreveal non funzionerà se '%s' è in esecuzione.\n\nVuoi chiudere '%s'?
+18=Xreveal non funzionerà se %s è in esecuzione.\n\nVuoi chiudere %s?
 19=Xreveal sta eseguendo la scansione dell'unità %C:
 20=Il disco inserito sarà disponibile a breve, attendi!
-21=L'unità %C: non è nella modalità di decrittazione on-the-fly!\n\nPer maggiori informazioni, fare riferimento alla finestra Informazioni nelle impostazioni.
-22=La cartella '%s' non dispone di sufficiente spazio!\nÈ necessario spazio aggiuntivo %s.
+21=L'unità %C: non è nella modalità di decriptazione on-the-fly!\n\nPer maggiori informazioni, fai riferimento alla finestra Info nelle impostazioni.
+22=La cartella %s non dispone di sufficiente spazio!\nÈ necessario %s di spazio aggiuntivo.
 23=Copia di %s...
 24=%.1f MB/s
 25=Operazione completata!
-26=Chiave dei decrittazione non trovata {%s}
+26=Chiave decriptazione non trovata {%s}
 27=Sito &web programma
 28=Xreveal non è riuscito ad aprire il disco, codice errore: %s.
 29=Unità
@@ -336,11 +336,11 @@ Author=bovirus (bovirus@gmail.com)
 38=%C:
 39=%C:\[%S]
 40=&Stato
-41=&Apri in Explorer
-42=&Invia metafile
-43=&Verifica hash contenuto...
-44=Crea immagine nella &cartella...
-45=Crea file i&mmagine ISO...
+41=Apri in Expl&orer
+42=Invia file &meta
+43=Verifica hash &contenuto...
+44=Crea file immagine nella &cartella...
+45=Crea file i&mmagine &ISO...
 46=&Abilita Xreveal
 47=&Disabilita Xreveal
 48=&Impostazioni...
@@ -358,18 +358,18 @@ Author=bovirus (bovirus@gmail.com)
 60=La licenza è scaduta il %s.
 61=Riproduttore
 62=Codice regionale
-63=Cambiamenti disponibili
+63=Modifiche disponibili
 64=Regione %C
-65=&Sempre in primo piano
+65=Sempre in primo pi&ano
 66=&Acquista
-67=Concesso in licenza a %s\nNumero max utenti: %d\nData scadenza licenza: %s
+67=Concesso in licenza a %s\r\nNumero max utenti: %d\r\nData scadenza licenza: %s
 68=A vita
 69=&Registra...
 70=Grazie per la registrazione!
 71=La chiave di registrazione inserita non è corretta.
 72=Nessun disco
-73=Vuoi ripristinare TUTTE le opzioni ai valori predefiniti?\n\nSelezionando "No" verranno ripristinate solo le opzioni della pagina attuale.
-74=ID Riga
+73=Vuoi ripristinare TUTTE le opzioni ai valori predefiniti?\n\nSelezionando 'No' verranno ripristinate solo le opzioni della pagina attuale.
+74=ID riga
 75=Stato
 76=Etichetta
 77=Tipo
@@ -379,16 +379,16 @@ Author=bovirus (bovirus@gmail.com)
 81=Aggiunto
 82=MKB
 83=Playlist principale
-84=Creato BDP
-85=LayerBreak
+84=Creato BD+
+85=Interruzione livello
 86=VID
 87=MK
 88=VUK
 89=UK
 90=&Visualizza
-91=&Elimina '%s'
+91=&Elimina "%s"
 92=Elimina &tutto
-93=Vuoi eliminare '%s'?
+93=Vuoi eliminare "%s"?
 94=Vuoi eliminare tutti i record?
 95=Questa funzione è disponibile solo nella <a>versione Pro</a>.
 96=&Aggiorna
@@ -406,7 +406,7 @@ Author=bovirus (bovirus@gmail.com)
 108=Output dettagliato
 109=Versione linea di comando (Windows/macOS/Linux)
 110=Interrompi
-111=Specifico produttore
+111=Produttore specifico
 112=La cartella %s non esiste. Vuoi crearla?
 113=Quando completato: 
 114=Non fare nulla
@@ -429,12 +429,12 @@ Author=bovirus (bovirus@gmail.com)
 131=Seleziona/trascina qui il file keydb.cfg
 132=%u%% completato
 133=Errore lettura dall'unità %C:!\nSettori: %u-%u
-134=Errore lettura in %s!\nSettori: %u-%u
+134=Errore lettura %s!\nSettori: %u-%u
 135=Interrotto!
 136=Copia...
 137=Funzione Pro
 138=De-registra
-139=Stai per creare un file immagine protetto. Il file può essere letto unicamente da un'unità virtuale, se xReveal è installato e in esecuzione!\n\nVuoi continuare?
+139=Stai per creare un file immagine protetto.\nIl file può essere letto unicamente se xReveal è installato e in esecuzione, da un'unità virtuale!\n\nVuoi continuare?
 140=Vuoi eliminare il file incompleto?\n\n%s
 141=Chiaro
 142=Scuro
@@ -453,7 +453,7 @@ Author=bovirus (bovirus@gmail.com)
 155=Messo in pausa
 156=All'infinito
 157=Vuoi de-registrare il programma?
-158=Nessuna unità è stata scansionata da Xreveal! Puoi modificare le impostazioni in <a>Mie unità</a>.
+158=Nessuna unità è stata scansionata da Xreveal!\nPuoi modificare le impostazioni in <a>Mie unità</a>.
 159=Spazio insufficiente nell'unità destinazione %C:!
 160=Azione
 161=Ri-scansione
@@ -469,16 +469,16 @@ Author=bovirus (bovirus@gmail.com)
 171=Valore
 172=Variabili utente (clic destro su un elemento per modificare il valore)
 173=Variabili disco
-174=Le mie variabili disco
-175=Variabili disco
+174=Variabili mio disco
+175=Variabili unità
 176=Salva con nome...
 177=Modifica modelli destinazione...
 178=Copia '%s'
 179=Aggiungi disco la cui apertura è fallita
-180=Aggiungi disco a unità virtuali
+180=Aggiungi disco alle unità virtuali
 181=Aggiungi disco non protetto
 182=Aggiungi %s
 183=&Prova Pro
 184=Passa a Pro
-185=Questa caratteristica è disponibile solo per utenti con una licenza Xreveal Pro. Puoi provare Pro gratuitamente o acquistare una licenza per sbloccare caratteristiche Pro.
-186=La chiave di decrittazione non è stata trovata. Puoi provare Pro gratuitamente o acquistare una licenza per sbloccare caratteristiche Pro.
+185=Questa funzionalità è disponibile solo per utenti con una licenza Xreveal Pro.\nPuoi provare Xreveal Pro gratuitamente od acquistare una licenza per sbloccare caratteristiche di Xreveal Pro.
+186=Chiave di decriptazione non disponibile.\nPuoi provare Xreveal Pro gratuitamente od acquistare una licenza per sbloccare le funzionalità di Xreveal Pro.
