--- a/Xreveal_FRA.ini
+++ b/Xreveal_FRA.ini
@@ -1,7 +1,7 @@
 [INFO]
 ID=0x040C
 Name=French (Français)
-Version=2.8.9
+Version=2.9.0
 Author=Andex
 1=OK
 2=Annuler
@@ -131,7 +131,7 @@ Author=Andex
 5=&Copier le dossier 'SSIF' lors de la copie d'un Blu-ray *3D* dans un dossier
 6=A&jouter l'état du lecteur au journal de copie
 7=A&fficher un avertissement lors de la création d'une image ISO protégée
-8=Enable the built-in ripper for &virtual drives
+8=Acti&ver la fonction de copie intégrée pour les lecteurs virtuels
 
 [DIALOG_18]
 0=Enregistrement de la licence Pro
@@ -146,8 +146,8 @@ Author=Andex
 0=HD DVD
 3=&Activer la prise en charge des HD DVD
 4=&Supprimer le 1er titre lisible
-5=Supprimer &UOPs (User Operation Prohibitions)
-6=Supprimer les &restrictions parentales
+5=S&upprimer UOPs (User Operation Prohibitions)
+6=Su&pprimer les restrictions parentales
 
 [DIALOG_21]
 0=Catalogue
@@ -206,7 +206,7 @@ Author=Andex
 
 [DIALOG_31]
 0=Modification des paramètres
-3=Des paramètres ont été changés, voulez-vous rescanner le(s) lecteur(s)?
+3=Des paramètres ont été changés, voulez-vous rescanner les lecteurs?
 
 [DIALOG_32]
 0=Décodage du certificat AACS
@@ -238,18 +238,18 @@ Author=Andex
 7=Démarrer
 
 [DIALOG_35]
-0=Destination Templates
-3=&Add
-4=&Edit
-5=&Delete
-6=Move &Up
-7=&Move Down
-8=Note: the first item is the default template.
+0=Modèles de destination
+3=&Ajouter
+4=&Editer
+5=&Supprimer
+6=&Monter
+7=&Descendre
+8=Note: le premier élément est le modèle utilisé par défaut
 
 [DIALOG_36]
 0=Destination
-3=Supported variables and <a>transforms</a>. Format: $(variable:transform), all names are case-insensitive.
-4=Replace underscores in $(DiscLabel) to spaces
+3=Variables supportées et <a>paramètres</a>. Usage: $(variable:paramètre). Les noms sont insensibles à la casse.
+4=&Remplacer les underscores _ dans $(DiscLabel) par des espaces
 
 [DIALOG_37]
 0=DestDir
@@ -258,17 +258,17 @@ Author=Andex
 
 [DIALOG_38]
 0=DiscTypeMap
-3=Please specify a map value corresponding to the disc type. <a>Supported variables</a>.
+3=Spécifiez une destination correspondant au type du disque  <a>Macros supportées</a>
 4=&DVD:
 5=&HD DVD:
 6=&BD:
 7=&UHD:
 
 [DIALOG_39]
-0=Replace or Save as
-3=The destination <a>%s</a> aready exists.
-4=Replace
-5=Save as
+0=Fichier/Dossier existant
+3=La destination <a>%s</a> existe déjà!
+4=&Remplacer
+5=&Enregistrer sous
 
 [DIALOG_A]
 0=Mise à jour
@@ -308,21 +308,21 @@ Author=Andex
 10=C - Russie, Inde, Chine, reste du monde
 11=Demander avant d'ouvrir le disque
 12=&Ne plus demander
-13=Aucun lecteur CD/DVD/Blu-ray détecté!\n\nRaisons possibles:\n1. Vous ne disposez pas d'un lecteur CD/DVD/Blu-ray.\n\n2. Le lecteur n'est pas alimenté ou incorrectement branché.
-14=La version du pilote ne correspond pas %d.%d≠%d.%d.\n\nMerci de réinstaller Xreveal.
+13=Aucun lecteur CD/DVD/Blu-ray détecté!\n\nRaisons possibles:\n1. Vous ne disposez pas d'un lecteur CD/DVD/Blu-ray.\n2. Le lecteur n'est pas alimenté ou incorrectement branché.
+14=La version du pilote ne correspond pas %d.%d≠%d.%d!\n\nMerci de réinstaller Xreveal.
 15=Certains fichiers sont manquants!\n\nMerci de réinstaller Xreveal.
 16=Xreveal ne s'est pas installé correctement!\n\nVoulez-vous corriger le problème?
 17=Vous devez redémarrer votre ordinateur pour utiliser Xreveal.\n\nVoulez-vous redémarrer maintenant?
 18=Xreveal ne fonctionnera pas si %s est en cours d'exécution.\n\nVoulez-vous fermer %s?
 19=Xreveal scanne le lecteur %C:
-20=Le disque sera disponible dans quelques instants, merci de patienter...
-21=Xreveal n'est pas activé pour le lecteur %C:!\n\nPour plus d'information, veuillez vous référer au 'Statut' dans les paramètres.
-22=Le dossier '%s' n'a pas assez d'espace libre!\nVous avez besoin de %s en plus.
+20=Le disque sera disponible dans quelques secondes!\nMerci de patienter...
+21=Xreveal n'est pas activé pour le lecteur %C:!\nPour plus d'information, veuillez vous référer à la section 'Infos' dans les paramètres.
+22=Le dossier '%s' n'a pas assez d'espace libre!\nVous avez besoin de %s supplémentaire.
 23=Copie de '%s' en cours...
 24=%.1f Mo/s
 25=Processus terminé avec succès!
 26=Pas de clé de déchiffrement trouvée dans {%s}!
-27=Site web...
+27=Site web
 28=Echec d'ouverture du disque, code d'erreur: %s
 29=Lecteur
 30=Fabricant
@@ -399,7 +399,7 @@ Author=Andex
 101=Fichier
 102=Dossier
 103=Lecteur
-104=Bus Encryption possible
+104=Bus Encryption géré
 105=%s (Lecteur: %s)
 106=Ouvrir le dossier '&log'
 107=Options
@@ -441,7 +441,7 @@ Author=Andex
 143=Système
 144=(%u essais)
 145=Mettre la copie en pause
-146=Continuer la copie...
+146=Reprendre la copie
 147=Programmes
 148=Occupé!
 149=Vérifier les mises à jour
@@ -465,20 +465,20 @@ Author=Andex
 167=Sélectionner ou déposer un fichier ISO ici
 168=Sélectionner ou déposer un dossier ici
 169=Aide
-170=Name
-171=Value
-172=User variables (Right-click an item to edit the value)
-173=Disc variables
-174=My Discs variables
-175=Drive variables
-176=Save as...
-177=Edit Destination Templates...
-178=Copy '%s'
-179=Add disc that failed to open
-180=Add disc in virtual drives
-181=Add unprotected disc
-182=Add %s
-183=&Try Pro
-184=Passer à Pro
-185=This feature is only available to users with a Xreveal Pro license. You can try Pro for free or buy a license to unlock Pro features.
-186=The decryption key was not found. You can try Pro for free or buy a license to unlock Pro features.
+170=Nom
+171=Valeur
+172=Variables utilisateur (Clic-droit sur un élément pour éditer la valeur)
+173=Variables disque
+174=Mes variables disque
+175=Variables lecteur
+176=Enregistrer sous...
+177=Modèles de destination...
+178=Copier '%s'
+179=Ajouter un disque impossible à ouvrir
+180=Ajouter un disque monté en lecteur virtuel
+181=Ajouter un disque non protégé
+182=Ajouter '%s'
+183=&Tester
+184=&Acheter...
+185=Cette fonctionnalité est disponible pour les utilisateurs possédant une license Pro.\nVous pouvez essayer la version Pro gratuitement ou acheter une licence.
+186=La clé de déchiffrement est introuvable!\nVous pouvez essayer la version Pro gratuitement ou acheter une licence.
